--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "purescript-console": "^3.0.0",
     "purescript-bonsai": "^0.6.0",
     "purescript-bonsai-forms": "^0.1.0",
-    "purescript-debug": "^3.0.0"
+    "purescript-debug": "^3.0.0",
+    "purescript-affjax": "^5.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
