--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ install:
   - npm install -g bower purescript pulp gulp-cli
 script:
   - npm install
+  - bower install --production
+  - pulp build
   - bower install
   - gulp
 deploy:
