--- a/bower.json
+++ b/bower.json
@@ -7,14 +7,10 @@
     "output"
   ],
   "dependencies": {
-    "purescript-prelude": "^3.1.1",
-    "purescript-console": "^3.0.0",
-    "purescript-debug": "^3.0.0",
-    "purescript-affjax": "^5.0.0",
-    "purescript-bonsai": "grmble/purescript-bonsai#master",
-    "purescript-bonsai-forms": "grmble/purescript-bonsai-forms#master"
+    "purescript-bonsai-forms": "grmble/purescript-bonsai-forms#purs_0_12",
+    "purescript-affjax": "^6.0.0"
   },
   "devDependencies": {
-    "purescript-psci-support": "^3.0.0"
+    "purescript-psci-support": "^4.0.0"
   }
 }
